Dirty hack to enable USB DAC detection in ViPER4Android
I have a deepest respect for ViPER4Android's developers but why did they use ANALOG_AUDIO_DOCK_PLUG intent to detect USB DAC?
This is not just a wrong approach, but it will never work in M or higher Android versions, since this intent is gone.

Since I have no access to new ViPER4Android (2.5.0.5) sources, I had to put this dirty hack in.

--- a/core/res/AndroidManifest.xml
+++ b/core/res/AndroidManifest.xml
@@ -78,6 +78,8 @@
     <protected-broadcast android:name="android.intent.action.USER_SWITCHED" />
     <protected-broadcast android:name="android.intent.action.INTENT_FILTER_NEEDS_VERIFICATION" />
     <protected-broadcast android:name="android.intent.action.SU_SESSION_CHANGED" />
+    <!-- A dirty hack for ViPER4Android -->
+    <protected-broadcast android:name="android.intent.action.ANALOG_AUDIO_DOCK_PLUG" />
 
     <protected-broadcast android:name="android.os.action.POWER_SAVE_MODE_CHANGED" />
     <protected-broadcast android:name="android.os.action.POWER_SAVE_MODE_CHANGING" />
