--- a/packages/DocumentsUI/AndroidManifest.xml
+++ b/packages/DocumentsUI/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
     <application
         android:name=".DocumentsApplication"
-        android:label="@string/app_label"
+        android:label="@string/title_standalone"
         android:icon="@drawable/ic_filemanager"
         android:supportsRtl="true">
 
